--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
@@ -4,7 +4,7 @@
 <div class="ui grid">
     <div class="sixteen wide column">
 
-        <div class="ui top attached text-center header">
+        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
             <h4>เพิ่มเลขแบบพิมพ์</h4>
         </div>
 
